--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/BioBoost/dot-net-grader#readme",
   "dependencies": {
+    "chalk": "^2.4.2",
     "commander": "^3.0.2",
     "table": "^5.4.6"
   }
